# react-native-chia-wallet-sdk

./: .gitignore  .gitmodules  CONTRIBUTING.md  LICENSE  README.md  chia-wallet.podspec  package.json  react-native-chia-wallet-sdk.podspec  tsconfig.json  ubrn.config.yaml
ChiaWalletSdkFramework.xcframework/: Info.plist
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/chiawalletsdk/: ChiaWalletModule.kt  ChiaWalletPackage.kt  ChiaWalletSdkModule.kt  ChiaWalletSdkPackage.kt
cpp/: chia-wallet.cpp  chia-wallet.h  react-native-chia-wallet-sdk.cpp  react-native-chia-wallet-sdk.h
example/: app.json  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/java/chiawalletsdk/example/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/res/values/: strings.xml
example/ios/: File.swift  Podfile
example/ios/ChiaWalletSdkExample/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
example/ios/ChiaWalletSdkExample.xcodeproj/: project.pbxproj
example/ios/ChiaWalletSdkExample.xcodeproj/xcshareddata/xcschemes/: ChiaWalletSdkExample.xcscheme
example/ios/ChiaWalletSdkExample.xcworkspace/: contents.xcworkspacedata
example/ios/ChiaWalletSdkExampleTests/: ChiaWalletSdkExampleTests.m
example/src/: App.tsx
ios/: ChiaWallet.h  ChiaWallet.mm  ChiaWalletSdk.h  ChiaWalletSdk.mm
src/: NativeChiaWallet.ts  NativeChiaWalletSdk.ts  index.tsx
